[package]
name = "io_playground"
version = "0.1.0"
edition = "2021"
authors = ["crrow"]
license = "Apache-2.0"
description = "Play with IO in Rust"
homepage = "https://github.com/crrow/io_playground"
repository = "https://github.com/crrow/io_playground"

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false

[[bin]]
name = "io_playground"
path = "src/bin/main.rs"

[dependencies]
enum_derive="0.1.7"
anyhow = "1.0.86"
bitflags = "2.5.0"
clap = { version = "4.5.8", features = ["derive"] }
const_format = "0.2.32"
rustix = { version = "0.38.34", features = ["fs"] }
serde = "1.0.203"
serde_derive = "1.0.202"
tempfile = "3.10.1"
tokio = { version = "1.35.1", features = ["full", "tracing", "io-util"] }
tokio-util = "0.7.10"
bytes = "1.6.0"
futures = "0.3.30"
rand = { version = "0.9.0-alpha.1", features = [] }
libc = "0.2.155"
rio = "0.9.4"
strum = "0.26.3"
strum_macros = "0.26.4"
glommio = "0.9.0"
crossbeam-queue = "0.3.11"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
built = { version = "0.7.1", features = ["git2"] }
