[package]
name = "io_playground"
version = "0.1.0"
edition = "2024"
authors = ["crrow"]
license = "Apache-2.0"
description = "Play with IO in Rust"
homepage = "https://github.com/crrow/io_playground"
repository = "https://github.com/crrow/io_playground"

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false

[[bin]]
name = "io_playground"
path = "src/bin/main.rs"

[dependencies]
anyhow = "^1.0.86"
bitflags = "^2.5.0"
bon = "^3.6.3"
byteorder = "^1.5.0"
bytes = "^1.10.1"
clap = { version = "^4.5.37", features = ["derive"] }
const_format = "^0.2.32"
crc32fast = "1.4.2"
crossbeam-channel = "^0.5.15"
crossbeam-queue = "^0.3.11"
dashmap = "6.1.0"
derive_more = { version = "^2.0.1", features = ["from", "into", "try_from"] }
enum_derive = "^0.1.7"
event-listener = "^5.4.0"
futures = "^0.3.30"
futures-util = "^0.3"
glommio = "^0.9.0"
libc = "0.2.172"
rand = { version = "^0.9.0-alpha.1", features = [] }
rio = "^0.9.4"
rustix = { version = "^0.38.34", features = ["fs"] }
serde = { version = "^1.0.203", features = ["derive"] }
serde_derive = "^1.0.202"
smart-default = "^0.7.1"
snafu = "^0.8"
strum = "^0.27.1"
strum_macros = "^0.27.1"
tempfile = "^3.10.1"
threadpool = "^1.8.1"
tokio = { version = "^1.38", features = ["macros", "rt-multi-thread", "signal", "full", "tracing", "io-util"] }
tokio-stream = "^0.1"
tokio-util = "^0.7.10"
tonic = "^0.12"
tracing = "^0.1"

[dev-dependencies]
criterion = "^0.5.1"

[build-dependencies]
built = { version = "^0.7.1", features = ["git2"] }
